add search page
